force-app/main/default/objects/Dashboard_quickSight__mdt/Dashboard_quickSight__mdt.object-meta.xml
<CustomObject>
    <label>Dashboard_quickSight</label>
    <pluralLabel>Dashboard_quickSight</pluralLabel>
</CustomObject>