force-app/main/default/objects/Dashboard_quickSight__mdt/fields/id_dashboard__c.field-meta.xml
<CustomField>
    <fullName>id_dashboard__c</fullName>
    <label>id_dashboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>