force-app/main/default/objects/Dashboard_quickSight__mdt/fields/Nombre_dashboard__c.field-meta.xml
<CustomField>
    <fullName>Nombre_dashboard__c</fullName>
    <label>Nombre_dashboard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>